# mydevtools

./: .gitignore  pyproject.toml  readme.md
examples/: no_traceback_from_lib.py  try_silence.py
mydevtools/: filter_lib_traceback.py  no_warning.py
